v1.0.19: fix JVM startup crash for Java 21 with Fabric (filter Java 23+ flags)